added search bar to listReports.html

--- a/src/main/resources/templates/report/listReports.html
+++ b/src/main/resources/templates/report/listReports.html
@@ -12,8 +12,13 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layo
   </head>
 
   <body class="text-center" data-new-gr-c-s-check-loaded="14.1067.0" data-gr-ext-installed="">
-    <div class="Post-list" layout:fragment="main-content">
-        <div class="container bootstrap snippets bootdey">
+    <div  style="justify-content: center; align-items: center;" class="container text-center" layout:fragment="main-content">
+        <div  style="justify-content: center; align-items: center; margin: 0; padding: 0;">
+
+              <div  style="width: 925px;" class="input-group">
+                <input type="search" class="form-control rounded" placeholder="Name or mm/dd/yyyy" aria-label="" aria-describedby="search-addon" />
+                <button type="button" class="btn btn-outline-primary">search</button>
+              </div>
             <div class="row">
                 <div class="post-list">
                     <div class="row" >
@@ -93,7 +98,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layo
                 
                 
             </div>
-        </div>
+        
     </div>
 
 </body>
