--- a/src/main/resources/templates/report/reportDesign.html
+++ b/src/main/resources/templates/report/reportDesign.html
@@ -6,7 +6,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layo
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <link href="../static/css/listReport.css" th:href="@{/css/listReport.css}" rel="stylesheet">
+    <link href="../static/css/listReport.css" th:href="@{css/listReport.css}" rel="stylesheet">
 
     <title>Account details</title>
   </head>
