--- a/src/main/resources/templates/report/listReports.html
+++ b/src/main/resources/templates/report/listReports.html
@@ -6,7 +6,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layo
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <link href="../static/css/listReport.css" th:href="@{/css/listReport.css}" rel="stylesheet">
+    <link href="../static/css/listReport.css" th:href="@{css/listReport.css}" rel="stylesheet">
 
     <title>Account details</title>
   </head>
@@ -24,7 +24,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layo
                     <div class="row" >
                         <div class="col-sm-2">
                             <div class="picture">
-                                <img alt="Opt wizard thumbnail" src="../static/img/person-icon-blue-7560.png" th:src="@{img/person-icon-blue-7560.png}">
+                                <img alt="Opt wizard thumbnail" src="../static/img/person-icon.png" th:src="@{img/person-icon.png}">
                             </div>
                         </div>
                         <div class="col-sm-6">
