--- a/src/main/resources/templates/user/signUp.html
+++ b/src/main/resources/templates/user/signUp.html
@@ -10,13 +10,18 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layo
   </head>
 
   <body class="text-center" data-new-gr-c-s-check-loaded="14.1067.0" data-gr-ext-installed="">
-    <form class="form-signin" layout:fragment="main-content">
+    <form class="form-signin" layout:fragment="main-content" method="post" th:action="@{/register}" th:object="${signupRequest}">
       <img class="mb-4" src="../static/img/logo.png" th:src="@{img/logo.png}" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Create an Account</h1>
+      <p th:text="${param.error}">Test</p>
+
+
       <label for="inputEmail" class="sr-only">Username</label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="Username " required="" autofocus="">
+      <input type="text" id="inputEmail" th:field="*{userName}" name="userName" class="form-control" placeholder="Username " required="" autofocus="">
+      <p th:if="${param.error}" class="alert alert-danger" th:errors="*{userName}">Incorrect username</p>
+
       <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+      <input type="password" id="inputPassword" th:field="*{password}" name="password" class="form-control" placeholder="Password" required="">
       <div class="checkbox mb-3">
         <label>
           <p>Have already an account? <a href="/">Login here</a></p>
@@ -25,8 +30,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layo
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
       <p class="mt-5 mb-3 text-muted">© 2022</p>
     </form>
-  
-
+    
 </body>
 <grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
 </html>
